<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/grisFonce">

    <Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="@color/bleuClair"
        tools:ignore="MissingConstraints">
    </Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginTop="10dp"
        android:id="@+id/ballGen">

        <ImageButton
            android:id="@+id/gen1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/ball_gen" />

        <ImageButton
            android:id="@+id/gen2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"

            android:background="@drawable/ball_gen_non_selec" />

        <ImageButton
            android:id="@+id/gen3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/ball_gen_non_selec" />

        <ImageButton
            android:id="@+id/gen4"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/ball_gen_non_selec" />

        <ImageButton
            android:id="@+id/gen5"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/ball_gen_non_selec" />

        <ImageButton
            android:id="@+id/gen6"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/ball_gen_non_selec" />

        <ImageButton
            android:id="@+id/gen7"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/ball_gen_non_selec" />

        <ImageButton
            android:id="@+id/gen8"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/ball_gen_non_selec" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ballGen"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/textGen">

        <TextView
            android:id="@+id/textGen1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/gen1"
            android:textStyle="italic"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/textGen2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/gen2"
            android:textStyle="italic"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/textGen3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/gen3"
            android:textStyle="italic"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/textGen4"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/gen4"
            android:textStyle="italic"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/textGen5"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/gen5"
            android:textStyle="italic"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/textGen6"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/gen6"
            android:textStyle="italic"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/textGen7"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/gen7"
            android:textStyle="italic"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/textGen8"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/gen8"
            android:textStyle="italic"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPokemon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textGen"/>

</androidx.constraintlayout.widget.ConstraintLayout>