<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/grisFonce">

    <!--    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:paddingEnd="6dp"
            android:translationZ="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/header"
            app:srcCompat="@drawable/ic_back"
            android:paddingRight="6dp"
            android:paddingLeft="12dp"
            tools:ignore="VectorDrawableCompat"
            android:clickable="true"
            android:focusable="true"/>-->

    <TextView
        android:id="@+id/app_name"
        style="@style/TextStyle"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pokedex"
        android:textColor="@color/blanc"
        android:textSize="18sp"
        android:translationZ="100dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginStart="12dp"
        android:gravity="center"
        android:textAlignment="center"
        android:text="001"
        android:textColor="@color/blanc"
        android:textSize="18sp"
        android:textStyle="bold"
        android:translationZ="100dp"
        app:layout_constraintEnd_toEndOf="@id/header"
        app:layout_constraintTop_toTopOf="@id/header"
        tools:text="#001"
        android:layout_marginLeft="12dp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/blanc"
        android:textSize="36sp"
        android:textStyle="bold"
        android:translationZ="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        tools:text="Alex" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="36dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/blanc"
        android:textSize="18sp"
        android:translationZ="100dp"
        android:text="Oui"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"/>

    <TextView
        android:id="@+id/taille_desc"
        android:layout_width="70dp"
        android:layout_height="59dp"
        android:text="@string/taille"
        android:textAppearance="@style/TextStyle"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/taille"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toLeftOf="@id/taille"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/taille" />


    <TextView
        android:id="@+id/taille"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textAppearance="@style/TextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toLeftOf="@id/name"
        app:layout_constraintStart_toEndOf="@id/taille_desc"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <TextView
        android:id="@+id/weight_desc"
        android:layout_width="70dp"
        android:layout_height="59dp"
        android:text="@string/poids"
        android:textAppearance="@style/TextStyle"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/weight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toLeftOf="@id/weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taille_desc" />

    <TextView
        android:id="@+id/weight"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textAppearance="@style/TextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/weight_desc"
        app:layout_constraintStart_toEndOf="@id/weight_desc"
        app:layout_constraintTop_toBottomOf="@id/taille" />

    <TextView
        android:id="@+id/Type_desc"
        android:layout_width="70dp"
        android:layout_height="59dp"
        android:text="@string/type"
        android:gravity="center"
        android:textAlignment="center"
        android:textAppearance="@style/TextStyle"
        app:layout_constraintEnd_toEndOf="@id/weight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toLeftOf="@id/weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weight_desc" />

    <TextView
        android:id="@+id/type1"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textAppearance="@style/TextStyle"
        app:layout_constraintEnd_toStartOf="@id/type2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/weight_desc"
        app:layout_constraintStart_toEndOf="@id/weight_desc"
        app:layout_constraintTop_toBottomOf="@id/weight" />

    <TextView
        android:id="@+id/type2"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textAppearance="@style/TextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/type1"
        app:layout_constraintStart_toEndOf="@id/type1"
        app:layout_constraintTop_toBottomOf="@id/weight" />

    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="@color/rouge"
        android:elevation="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/CadrePoke" />

        />

    <ImageView
        android:id="@+id/myPoke_img"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:scaleType="center"
        android:translationZ="100dp"
        app:layout_constraintBottom_toBottomOf="@id/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>